fix error connecting to db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,3306;Database=cms;User Id=root;Password=;TrustServerCertificate=True"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=cms-project;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
